--- a/AUTHORS
+++ b/AUTHORS
@@ -3,3 +3,4 @@
 # See hack/generate-authors.sh to make modifications.
 
 Mathikha Pule <proceedingmc@gmail.com>
+Ahmed saleh Solimansaleh Saleh <a12661826@gmail.com>
